--- a/src/app/demo/components/mentor-application/mentor-application-details/mentor-application-details.component.html
+++ b/src/app/demo/components/mentor-application/mentor-application-details/mentor-application-details.component.html
@@ -41,21 +41,29 @@
                         <li class="flex align-items-center py-3 px-2 border-top-1 surface-border flex-wrap">
                             <div class="text-500 w-6 md:w-2 font-medium">CV</div>
                             <div class="text-900 w-full md:w-10">
-                                <a *ngIf="application.cv" [href]="application.cv" target="_blank" class="text-primary">
-                                    <i class="pi pi-file-pdf mr-2"></i>View CV
+                                <a *ngIf="application?.cv"
+                                   href="javascript:void(0)"
+                                   (click)="downloadCv(application.id!, application.cv.split('/').pop() || 'cv.pdf')"
+                                   class="text-primary">
+                                    <i class="pi pi-file-pdf mr-2"></i>Download CV
                                 </a>
-                                <span *ngIf="!application.cv">No CV uploaded</span>
+                                <span *ngIf="!application?.cv">No CV uploaded</span>
                             </div>
                         </li>
+                        
                         <li class="flex align-items-center py-3 px-2 border-top-1 surface-border flex-wrap">
                             <div class="text-500 w-6 md:w-2 font-medium">Upload Paper</div>
                             <div class="text-900 w-full md:w-10">
-                                <a *ngIf="application.uploadPaper" [href]="application.uploadPaper" target="_blank" class="text-primary">
-                                    <i class="pi pi-file mr-2"></i>View Paper
+                                <a *ngIf="application?.uploadPaper"
+                                   href="javascript:void(0)"
+                                   (click)="downloadUploadPaper(application.id!, application.uploadPaper.split('/').pop() || 'paper.pdf')"
+                                   class="text-primary">
+                                    <i class="pi pi-file mr-2"></i>Download Paper
                                 </a>
-                                <span *ngIf="!application.uploadPaper">No paper uploaded</span>
+                                <span *ngIf="!application?.uploadPaper">No paper uploaded</span>
                             </div>
                         </li>
+                        
                         <li class="flex align-items-center py-3 px-2 border-top-1 surface-border flex-wrap">
                             <div class="text-500 w-6 md:w-2 font-medium">Links</div>
                             <div class="text-900 w-full md:w-10">
