edit application + still prev exp

--- a/src/app/demo/components/landing/landing.component.html
+++ b/src/app/demo/components/landing/landing.component.html
@@ -19,13 +19,15 @@
                             <span>Features</span>
                         </a>
                     </li>
+                    <!-- This is a comment 
+
                     <li>
                         <a (click)="router.navigate(['/prize-form'], {fragment: 'highlights'})" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
                             <span>Add a prize</span>
                         </a>
                     </li>
                     <li>
-                        <a (click)="router.navigate(['/sponsor-prizes'], {fragment: 'highlights'})" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
+                      <a (click)="router.navigate(['/sponsor-prizes'], {fragment: 'highlights'})" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
                             <span>My prizes</span>
                         </a>
                     </li>
@@ -39,6 +41,7 @@
                             <span>Sponsor Leaderboard</span>
                         </a>
                     </li>
+                    -->
                 </ul>
                 <div class="flex justify-content-between lg:block border-top-1 lg:border-top-none surface-border py-3 lg:py-0 mt-3 lg:mt-0">
                     <button pButton pRipple label="Login" class="p-button-text p-button-rounded border-none font-light line-height-2 text-blue-500"></button>
