--- a/src/app/demo/components/landing/navbar/navbar.component.html
+++ b/src/app/demo/components/landing/navbar/navbar.component.html
@@ -22,6 +22,8 @@
                     <span>Features</span>
                 </a>
             </li>
+            <!-- This is a comment=
+
             <li>
                 <a (click)="router.navigate(['/prize-form'], {fragment: 'highlights'})" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
                     <span>Add a prize</span>
@@ -42,6 +44,9 @@
                     <span>Sponsor Leaderboard</span>
                 </a>
             </li>
+
+        -->
+
 
         </ul>
         <div class="flex justify-content-between lg:block border-top-1 lg:border-top-none surface-border py-3 lg:py-0 mt-3 lg:mt-0">
