--- a/src/app/demo/components/prize/sponsor-prizes/sponsor-prizes.component.html
+++ b/src/app/demo/components/prize/sponsor-prizes/sponsor-prizes.component.html
@@ -1,5 +1,10 @@
 <app-navbar></app-navbar>
 <!-- src/app/components/sponsor-prizes/sponsor-prizes.component.html -->
+
+<!-- Add PrimeNG Toast and ConfirmDialog components -->
+<p-toast></p-toast>
+<p-confirmDialog [style]="{width: '450px'}"></p-confirmDialog>
+
 <div class="sponsor-prizes-container">
   <div class="sponsor-header" *ngIf="sponsorInfo">
     <p>Prizes sponsored by {{ sponsorInfo.companyName || 'your company' }}</p>
