--- a/src/app/demo/components/sponsor/sponsor-application-list/sponsor-application-list.component.html
+++ b/src/app/demo/components/sponsor/sponsor-application-list/sponsor-application-list.component.html
@@ -12,7 +12,10 @@
                 [globalFilterFields]="['id','companyName','registrationNumber','status']" responsiveLayout="scroll">
             <ng-template pTemplate="caption">
                 <div class="flex justify-content-between flex-column sm:flex-row">
-                    <button pButton label="Refresh" class="p-button-outlined mb-2" icon="pi pi-refresh" (click)="refreshApplications()"></button>
+                    <div class="flex gap-2">
+                        <button pButton label="Refresh" class="p-button-outlined mb-2" icon="pi pi-refresh" (click)="refreshApplications()"></button>
+                        <button pButton label="Download PDF" class="p-button-outlined p-button-success mb-2" icon="pi pi-file-pdf" (click)="exportPDF()"></button>
+                    </div>
                     <span class="p-input-icon-left mb-2">
                         <i class="pi pi-search"></i>
                         <input pInputText type="text" #filter (input)="onGlobalFilter(dt1, $event)" placeholder="Search Keyword" class="w-full"/>
