--- a/src/app/demo/components/landing/landing.component.html
+++ b/src/app/demo/components/landing/landing.component.html
@@ -19,6 +19,12 @@
                             <span>Features</span>
                         </a>
                     </li>
+
+                    <li>
+                        <a [routerLink]="['/mentor-form']" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
+                          <span>participate</span>
+                        </a>
+                      </li>
                     <!-- This is a comment 
 
                     <li>
