--- a/src/app/demo/components/mentor-application/mentor-application-list/mentor-application-list.component.html
+++ b/src/app/demo/components/mentor-application/mentor-application-list/mentor-application-list.component.html
@@ -102,7 +102,7 @@
                     (click)="updateStatus(application?.id!, ApplicationStatus.REJECTED)" 
                     [disabled]="!application?.id || application?.status === ApplicationStatus.REJECTED"></button>
                   <button pButton pRipple icon="pi pi-eye" class="p-button-rounded p-button-info" 
-                    [routerLink]="['/mentor-applications-admin', application?.id]"
+                    [routerLink]="['/mentor-applications', application?.id]"
                     [disabled]="!application?.id"></button>
                 </div>
               </td>
