--- a/src/app/demo/components/mentor-evaluation/mentor-evaluation-list/mentor-evaluation-list.component.html
+++ b/src/app/demo/components/mentor-evaluation/mentor-evaluation-list/mentor-evaluation-list.component.html
@@ -1,1 +1,116 @@
-<p>mentor-evaluation-list works!</p>
+<div class="grid">
+    <div class="col-12">
+      <div class="card">
+        <h5>Mentor Evaluations</h5>
+  
+        <p-table
+          #dt1
+          [value]="evaluations"
+          dataKey="id"
+          [rows]="10"
+          [paginator]="true"
+          [globalFilterFields]="['mentor.name', 'mentor.lastname', 'team.name', 'feedbackText']"
+          [loading]="loading"
+          [rowHover]="true"
+          responsiveLayout="scroll"
+          styleClass="p-datatable-gridlines">
+  
+          <!-- Global filter -->
+          <ng-template pTemplate="caption">
+            <div class="flex justify-content-between flex-column sm:flex-row">
+              <button
+                pButton
+                label="Clear"
+                class="p-button-outlined mb-2"
+                icon="pi pi-filter-slash"
+                (click)="clear(dt1)">
+              </button>
+              <span class="p-input-icon-left mb-2">
+                <i class="pi pi-search"></i>
+                <input
+                  pInputText
+                  type="text"
+                  (input)="onGlobalFilter(dt1, $event)"
+                  placeholder="Search Keyword"
+                  class="w-full" />
+              </span>
+            </div>
+          </ng-template>
+  
+          <!-- Header -->
+          <ng-template pTemplate="header">
+            <tr>
+              <th>Mentor</th>
+              <th>Team</th>
+              <th>Rating</th>
+              <th>Feedback</th>
+              <th>Created At</th>
+              <th >Actions</th>
+
+            </tr>
+          </ng-template>
+  
+          <!-- Body -->
+          <ng-template pTemplate="body" let-eval>
+            <tr>
+              <td>
+                <ng-container *ngIf="eval.mentor; else noMentor">
+                  {{ eval.mentor.name }} {{ eval.mentor.lastname }}
+                </ng-container>
+                <ng-template #noMentor>N/A</ng-template>
+              </td>
+              <td>
+                <ng-container *ngIf="eval.team; else noTeam">
+                    {{ eval.team.teamName }}
+                </ng-container>
+                <ng-template #noTeam>N/A</ng-template>
+              </td>
+              <td>
+                <p-rating
+                  [readonly]="true"
+                  [cancel]="false"
+                  [stars]="5"
+                  [(ngModel)]="eval.rating">
+                </p-rating>
+              </td>
+              <td>{{ eval.feedbackText || 'No feedback provided' }}</td>
+              <td>{{ eval.createdAt ? (eval.createdAt | date: 'short') : 'N/A' }}</td>
+
+              <td style="min-width: 10rem;">
+                <div class="flex gap-2">
+                  <!-- Edit button -->
+                  <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-warning"
+                  (click)="editEvaluation(eval.id)">
+                </button>
+              
+                  <!-- Delete button -->
+                  <button 
+                    pButton 
+                    pRipple 
+                    icon="pi pi-trash" 
+                    class="p-button-rounded p-button-danger" 
+                    (click)="deleteEvaluation(eval.id)">
+                  </button>
+                </div>
+              </td>
+            </tr>
+          </ng-template>
+  
+          <!-- Empty state -->
+          <ng-template pTemplate="emptymessage">
+            <tr>
+              <td colspan="5">No evaluations found.</td>
+            </tr>
+          </ng-template>
+  
+          <!-- Loading -->
+          <ng-template pTemplate="loadingbody">
+            <tr>
+              <td colspan="5">Loading evaluations...</td>
+            </tr>
+          </ng-template>
+  
+        </p-table>
+      </div>
+    </div>
+  </div>
