--- a/src/app/demo/components/landing/navbar/navbar.component.html
+++ b/src/app/demo/components/landing/navbar/navbar.component.html
@@ -51,6 +51,9 @@
 
         </ul>
         <div class="flex justify-content-between lg:block border-top-1 lg:border-top-none surface-border py-3 lg:py-0 mt-3 lg:mt-0">
+            <div class="badge-container" *ngIf="user">
+                <img [src]="getBadgeIcon()" [alt]="user.badge" class="badge-icon" />
+              </div>
             <button pButton pRipple label="Login" class="p-button-text p-button-rounded border-none font-light line-height-2 text-blue-500"></button>
             <button pButton pRipple label="Register" class="p-button-rounded border-none ml-5 font-light line-height-2 bg-blue-500 text-white"></button>
         </div>
